public/index.css
@font-face {
    font-family: 'Comfortaa';
    font-weight: 300;
    font-style: normal;
    font-display: auto;
    src: local("Comfortaa"), url("./fonts/Comfortaa/Comfortaa-Light.ttf") format("ttf");
}

@font-face {
    font-family: 'Comfortaa';
    font-weight: 400;
    font-style: normal;
    font-display: auto;
    src: local("Comfortaa"), url("./fonts/Comfortaa/Comfortaa-Regular.ttf") format("ttf");
}

@font-face {
    font-family: 'Comfortaa';
    font-weight: 500;
    font-style: normal;
    font-display: auto;
    src: local("Comfortaa"), url("./fonts/Comfortaa/Comfortaa-Medium.ttf") format("ttf");
}

@font-face {
    font-family: 'Comfortaa';
    font-weight: 600;
    font-style: normal;
    font-display: auto;
    src: local("Comfortaa"), url("./fonts/Comfortaa/Comfortaa-SemiBold.ttf") format("ttf");
}

* {
    font-family: Comfortaa, Calibri, serif;
    font-weight: 400;
    font-size: 16px;

    --primary-color: #FF9E00;
    --secondary-color: #32466B;
    --email-color: #47BAEA;
}

.clickable:hover {
    cursor: pointer;
}

.icon {
    width: 16px;
    height: 16px;
    stroke: black;
}

.icon_24 {
    width: 24px;
    height: 24px;
}

/*ymaps*/

.ymaps-2-1-79-balloon__layout,
.ymaps-2-1-79-balloon__content,
.ymaps-2-1-79-balloon__tail:after {
    background: var(--secondary-color) !important;
}

.ymaps-2-1-79-balloon__close-button {
    background: url("./icons/cross.svg") no-repeat center !important;
    background-size: 12px 12px !important;
}

[class*="ymaps-2-1"][class*="-ground-pane"] {
    filter: grayscale(1);
    -ms-filter: grayscale(1);
    -webkit-filter: grayscale(1);
    -moz-filter: grayscale(1);
    -o-filter: grayscale(1);
}

.balloon__header {
    color: var(--primary-color);
    font-weight: 600;
}

.balloon__body {
    display: flex;
    flex-direction: column;
    color: white;
}

.balloon_phoneNumbers {
    display: flex;
    gap: .5em;
}

.balloon__email {
    color: var(--email-color);
}

/*layouts*/

.layout {
    background: var(--secondary-color);
    display: flex;
    align-items: center;
    justify-content: center;
}

.layout_circle {
    border-radius: 100px;
}

/*claster layout*/

.claster {
    width: 32px;
    height: 32px;
}

.claster__number {
    color: white;
    font-weight: 600;
}

/*placemark layout*/

.placemark {
    width: 24px;
    height: 24px;
}

.layout_selected {
    border: 2px solid white;
    -webkit-box-shadow: 0 0 32px 10px var(--secondary-color);
    -moz-box-shadow: 0 0 32px 10px var(--secondary-color);
    box-shadow: 0 0 32px 10px var(--secondary-color);
}

